--- a/RecycleHub/src/index.html
+++ b/RecycleHub/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="bg-white ">
+<body class="bg-gradient-to-t from-[#bed47c] to-[#dfe4d3] ">
   <app-root></app-root>
 </body>
 </html>
